<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.unmute.bgtb.CounterEdit"
    android:focusable="false">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imgEditCounter"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="34dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_shape_counter_edit"
        android:id="@+id/txtShape"
        android:layout_alignParentTop="false"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="100dp" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/spnShape"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@id/txtShape"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignLeft="@+id/txtShape"
        android:layout_below="@+id/txtShape"
        android:entries="@array/shape_array"
        android:touchscreenBlocksFocus="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_color_counter_edit"
        android:id="@+id/txtColor"
        android:layout_below="@+id/spnShape"
        android:layout_alignLeft="@+id/spnShape"
        android:layout_alignStart="@+id/spnShape" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/spnColor"
        android:layout_below="@+id/txtColor"
        android:layout_alignLeft="@+id/txtColor"
        android:layout_alignStart="@+id/txtColor"
        android:entries="@array/color_array" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txtEditCounter"
        android:layout_below="@+id/imgEditCounter"
        android:layout_alignLeft="@+id/imgEditCounter"
        android:layout_alignStart="@+id/imgEditCounter"
        android:gravity="center_horizontal" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_name_counter_edit"
                android:id="@+id/txtName"
                android:layout_alignBaseline="@+id/txtDefValue"
                android:layout_alignBottom="@+id/txtDefValue"
                android:layout_alignLeft="@+id/txtEditCounter"
                android:layout_alignStart="@+id/txtEditCounter"
                android:layout_marginRight="10dp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtfldName"
                android:layout_alignBottom="@+id/txtDefValue"
                android:layout_alignLeft="@+id/txtfldDefValue"
                android:layout_alignStart="@+id/txtfldDefValue"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_def_value_counter_edit"
                android:id="@+id/txtDefValue"
                android:layout_alignBaseline="@+id/txtfldDefValue"
                android:layout_alignBottom="@+id/txtfldDefValue"
                android:layout_alignLeft="@+id/txtName"
                android:layout_alignStart="@+id/txtName"
                android:layout_marginRight="10dp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/txtfldDefValue"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:selectAllOnFocus="true" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_counter_edit"
        android:id="@+id/btnCancel"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/tableLayout"
        android:layout_marginLeft="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_counter_edit"
        android:id="@+id/btnSave"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp" />

</RelativeLayout>
